# m9_ocr

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 01_FashionInsta_Cadrage_Projet_Couts_ROI.ipynb  02_FashionInsta_Analyse_Risques.ipynb
src/api/domain/: models.py
